<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="app_title">My Nanodegree Apps!</string>
    <string name="media_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="lib_app">LIBRARY APP</string>
    <string name="build_bigger">BUILD IT BIGGER</string>
    <string name="bacon_reader">BACON READER</string>
    <string name="capstone">CAPSTONE: MY APP</string>
    <string name="action_settings">Settings</string>
</resources>
