<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment">

    <TextView android:text="@string/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:textColor="#327ebc"
        android:textSize="@dimen/abc_text_size_large_material" />

    <Button
        style="@style/buttonStyle"
        android:text="@string/media_streamer"
        android:id="@+id/button1"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        />
    <Button
        style="@style/buttonStyle"
        android:text="@string/scores_app"
        android:id="@+id/button2"
        android:layout_below="@+id/button1"
        android:layout_alignParentStart="true"
        />
    <Button
        style="@style/buttonStyle"
        android:text="@string/lib_app"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignParentStart="true"
        />
    <Button
        style="@style/buttonStyle"
        android:text="@string/build_bigger"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_alignParentStart="true"
        />
    <Button
        style="@style/buttonStyle"
        android:text="@string/bacon_reader"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_alignParentStart="true"
        />
    <Button
        style="@style/buttonStyle"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_alignParentStart="true"
        android:background="@android:color/holo_red_light"
        />




</RelativeLayout>
